<resources>
    <string name="app_name">PM25</string>
    <string name="welcome">Report weather and pm2.5 now</string>
    <string name="action_settings">Settings</string>

    <string name="app_version">Version %s</string>
    <string name="start_text">Start</string>

    <string name="city">City:</string>
    <string name="city_now">ShangHai</string>

    <string name="date">Date:</string>
    <string name="date_today">2016-07-06</string>

    <string name="weather">Weather:</string>
    <string name="weather_today">Sunny</string>

    <string name="pm25">PM25:</string>
    <string name="pm25_now">24</string>
</resources>
