<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.xy.myapplication.MainActivity"
    tools:showIn="@layout/activity_main"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="@dimen/font_title"
        />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        >

        <TextView
            android:id="@+id/weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weather"
            />
        <TextView
            android:id="@+id/weather_today"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weather_today"
            android:layout_alignParentRight="true"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/pm25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pm25"
            />
        <TextView
            android:id="@+id/pm25_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pm25_now"
            android:layout_alignParentRight="true"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city"
            />
        <TextView
            android:id="@+id/city_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city_now"
            android:layout_alignParentRight="true"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            />
        <TextView
            android:id="@+id/date_today"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_today"
            android:layout_alignParentRight="true"
            />
    </RelativeLayout>

</LinearLayout>
